fix catalog mode overlapping on small screen sizes

--- a/css/img_global.css
+++ b/css/img_global.css
@@ -759,3 +759,8 @@ border: none;
 .replymode, .passvalid, .catalogmode {
   margin-top: -20px; 
 }
+@media (min-width: 600px) {
+  .replymode, .passvalid, .catalogmode {
+    margin-top: -20px; 
+  }
+}
